# doreisa

./: .gitignore  404.html  Dockerfile  README.md  build-images.sh  client.py  head.py  index.html  lib.py  main.cpp  pdi_config.yml  pyproject.toml  run_simulation_g5k.py
.github/workflows/: ci.yml  release.yml
analytics/: index.html
docker/: requirements.txt
docker/analytics/: requirements.txt
docker/simulation/: Dockerfile  README.md  requirements.txt
docs/: analytics.md
doreisa/: __init__.py  _async_dict.py  _scheduler.py  _scheduling_actor.py  head_node.py  in_transit_analytic_actor.py  simulation_node.py  window_api.py
experiments/array_bottleneck/: experiment.py  head.py  worker.py
experiments/full-experiment/: experiment.py  head-small.py  head.py  plot.py  results.txt  worker.py
experiments/ray-benchmark/: experiment.py  head.py  results-nancy-gros.txt  results-rennes-paradoxe.txt
experiments/refs-gathering-benchmark/: experiment.py  head.py  plot-heatmap.py  worker.py
search/: search_index.json
tests/: test_big.py  test_dask_persist.py  test_doreisa.py  test_dtype.py  test_in_transit.py  test_memory_release.py  test_prepare_iteration.py  test_preprocessing_callback.py  test_several_arrays.py  test_sliding_window.py  utils.py
