[project]
name = "dask_on_ray_test"
version = "0.1.0"
description = ""
authors = [
    {name = "Adrien Vannson",email = "adrien.vannson@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask[dataframe] (==2024.6.0)",
    "ray[default] (>=2.42.1,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "graphviz (>=0.20.3,<0.21.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
